Closed Bug 1951177 Opened 23 days ago Closed 18 days ago

Crash in [@ mozilla::widget::DMABufDevice::GetDRMFormat] (continued 2)

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
138 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox136 --- unaffected
firefox137 --- wontfix
firefox138 --- fixed

People

(Reporter: mccr8, Assigned: stransky)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/7592a82d-a3ce-4c62-b511-96b4c0250228

MOZ_CRASH Reason:

MOZ_DIAGNOSTIC_ASSERT(mFormatRGBA) (Missing RGBA dmabuf format!)

Top 10 frames:

0  libxul.so  MOZ_CrashSequence(void*, long)  mfbt/Assertions.h:267
0  libxul.so  mozilla::widget::DMABufDevice::GetDRMFormat(int)  widget/gtk/DMABufLibWrapper.cpp:282
1  libxul.so  DMABufSurfaceRGBA::Create(int, int, int)  widget/gtk/DMABufSurface.cpp:558
2  libxul.so  DMABufSurfaceRGBA::CreateDMABufSurface(int, int, int)  widget/gtk/DMABufSurface.cpp:1172
3  libxul.so  mozilla::layers::DMABUFTextureData::Create(mozilla::gfx::IntSizeTyped<mozilla...  gfx/layers/opengl/DMABUFTextureClientOGL.cpp:37
4  libxul.so  mozilla::layers::TextureData::Create(mozilla::layers::TextureType, mozilla::g...  gfx/layers/client/TextureClient.cpp:351
4  libxul.so  mozilla::layers::TextureData::Create(mozilla::layers::TextureForwarder*, mozi...  gfx/layers/client/TextureClient.cpp:400
4  libxul.so  mozilla::layers::TextureClient::CreateForDrawing(mozilla::layers::TextureForw...  gfx/layers/client/TextureClient.cpp:1385
5  libxul.so  mozilla::layers::TextureClient::CreateForDrawing(mozilla::layers::KnowsCompos...  gfx/layers/client/TextureClient.cpp:1360
5  libxul.so  mozilla::layers::CreateTexture(mozilla::layers::KnowsCompositor*, mozilla::gf...  gfx/layers/PersistentBufferProvider.cpp:114

Two patches have been landed for this already, but the crash still seems to be continuing in decent volume on Nightly.

See Also: → 1951102

It may be with gfx.webrender.compositor.force-enabled / gfx.webrender.compositor.enabled or enabled Linux/HDR support. I wonder how to separate crashes from this experimental and not ready-to use yet backend.

Flags: needinfo?(stransky)

Yes, I see what's the problem here. We may fail to configure dmabuf device so we quit early and don't se dmabuf formats. Such scenario leads to missing dmabuf support anyway but we crash because of the missing formats.

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Flags: needinfo?(stransky)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/dbf09caf0b82 [Wayland] Always set basic RGB formats r=emilio
Status: ASSIGNED → RESOLVED
Closed: 18 days ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch

The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox137 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(stransky)

MOZ_DIAGNOSTIC_ASSERT is not enabled in beta/release so we don't need to backport it.

Flags: needinfo?(stransky)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: