Bug 1951177 [Wayland] Always set basic RGB formats r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D240308